metodo string com exer

--- a/metodos_string.ipynb
+++ b/metodos_string.ipynb
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 7, 11]\n"
+      "[1, 7, 19, 22]\n"
      ]
     }
    ],
@@ -88,6 +88,199 @@
     "print(x)\n",
     "\n",
     "# vai corinthians"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### join()\n",
+    "Ele pega uma lista de elementos string e transforma  em uma string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lua', 'de', 'mel'] <class 'list'>\n",
+      "Lua-de-mel\n",
+      "Lua,de,mel\n",
+      "Luaolha que legaldeolha que legalmel\n"
+     ]
+    }
+   ],
+   "source": [
+    "# frase1 = \"lua de mel\"\n",
+    "# frase1[0] = 'L'\n",
+    "# print(frase1[0])\n",
+    "# frase2 = ['l', 'u', 'a', ' ', 'd', 'e', ' ', 'mel']\n",
+    "# frase2[0] = 'L'\n",
+    "# print(frase2[0])\n",
+    "frase3 = [\"Lua\", \"de\", \"mel\"]\n",
+    "print(frase3, type(frase3))\n",
+    "x = \" \".join(frase3)\n",
+    "print(\"-\".join(frase3))\n",
+    "print(\",\".join(frase3))\n",
+    "print(\"olha que legal\".join(frase3))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Lua de mel"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## split()\n",
+    "O método spli é complemento do join(), ou seja, ele faz o contrário."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carlos Tevez\n",
+      "['Carlos', 'Tevez']\n",
+      "['Carlos T', 'v', 'z']\n",
+      "['Carlos Te', 'z']\n",
+      "['Carlos Tevez']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = \"Carlos Tevez\"\n",
+    "print(nome)\n",
+    "print(nome.split()) # separa os elementos por espaços\n",
+    "print(nome.split('e')) # separa os elementos por 'e'\n",
+    "print(nome.split('ve'))\n",
+    "print(nome.split('x'))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  replace(str1, str2)\n",
+    "\n",
+    "procura a setença str1 e troca por str2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carlos tEvEz rossEto\n",
+      "carlos teVEz rosseto\n",
+      "carlos tzvzz rosszto\n",
+      "carlos_tevez_rosseto\n",
+      "carlos_tevez rosseto\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = \"carlos tevez rosseto\"\n",
+    "print(nome.replace('e', 'E'))\n",
+    "print(nome.replace('ve', 'VE'))\n",
+    "print(nome.replace('e', 'z'))\n",
+    "print(nome.replace(' ', '_'))\n",
+    "print(nome.replace(' ', '_', 1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## strip()\n",
+    "Elimina todos os espaços das extremidades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "' eliminaosespaços ' tem tamanho 18\n",
+      "'eliminaosespaços' tem tamanho 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = \" eliminaosespaços \"\n",
+    "print(f\"'{texto}' tem tamanho {len(texto)}\")\n",
+    "print(f\"'{texto.strip()}' tem tamanho {len(texto.strip())}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### operador de identidade: in \n",
+    "Retorna True se há algo na lista, senão retorna False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existe\n",
+      "Existe\n",
+      "Existe\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 3\n",
+    "if num in [1,2,3,4,5]:\n",
+    "    print(\"Existe\")\n",
+    "else:\n",
+    "    print(\"Não existe\")\n",
+    "\n",
+    "texto = \"Carlos Tevez\"\n",
+    "trecho = \"e\"\n",
+    "if trecho in texto:\n",
+    "    print(\"Existe\")\n",
+    "else:\n",
+    "    print(\"Não existe\")\n",
+    "\n",
+    "if '@' in ['a', 'b', 'c']:\n",
+    "    print(\"Existe\")\n",
+    "else:\n",
+    "    print(\"Não existe\")\n",
+    "\n",
+    "if '@' in \"abc@\":\n",
+    "    print(\"Existe\")\n",
+    "else:\n",
+    "    print(\"Não existe\")"
    ]
   }
  ],
