--- a/metodos_string.ipynb
+++ b/metodos_string.ipynb
@@ -282,6 +282,17 @@
     "else:\n",
     "    print(\"Não existe\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dado um texto pelo usuário, faça as seguintes rotinas:\n",
+    "1. conte quantas palavras existem\n",
+    "2. retorne o mesmo texto só com uma (especificado por parametro) em maiúsculo\n",
+    "3. Dado um numero, exiba a palavra correspondente."
+   ]
   }
  ],
  "metadata": {
